# warpinator-ffi

./: .gitignore  Cargo.toml  README.md  generate_android_binds  uniffi-android.toml
src/: config.rs  filesystem.rs  lib.rs  power_manager.rs
src/tracing/: android.rs  callbacks.rs  mod.rs
src/types/: message.rs  mod.rs  remote.rs  transfer.rs
